tests/fixtures/invalid/pow_set_list_float.py
# Cannot call pow() with Set[int], List[int], Float
x = pow({1, 2, 3}, [1, 2, 3], 1.0)
